# whisper-batch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_READINESS.md  pyproject.toml
.github/workflows/: tests.yml
src/whisper_batch/: __init__.py  cli.py  core.py
tests/: __init__.py  _support.py  test_cli.py  test_planning.py  test_run_batch.py
