[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-batch"
version = "0.1.0"
description = "Batch-transcribe a folder of audio files to text using OpenAI Whisper (local), with resume support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "The whisper-batch authors" }]
keywords = ["whisper", "transcription", "audio", "speech-to-text", "batch", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "openai-whisper",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/RAmuSelo/whisper-batch"
Source = "https://github.com/RAmuSelo/whisper-batch"
Issues = "https://github.com/RAmuSelo/whisper-batch/issues"

[project.scripts]
whisper-batch = "whisper_batch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
